<resources>
    <string name="app_name">FreeAgent</string>
    <string name="title_activity_pagina_principal">PaginaPrincipalActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- MAIN -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">You don\'t have an account?</string>
    <string name="btn_register">Register here</string>
    <string name="forget_pass">Did you forget your password?</string>

    <!-- RECOVERPASS -->
    <string name="msg_recover_pass">Introduce your email and we will send you a new password to Login</string>
    <string name="btn_send">SEND</string>
    <string name="msg_remember_pass">Did you recover your password?</string>
    <string name="link_go_login">Go back to Login</string>
    <string name="msg_check_email">Check your email to see your new password!</string>
    <string name="btn_go_back_login">Go back to Login</string>

    <!-- REGISTER -->
    <string name="playerUser">Player User</string>
    <string name="teamUser">Team User</string>
    <string name="userName">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="btnCreate">Create</string>

    <!-- HINTS -->
    <string name="hintName">Name</string>
    <string name="hintAlias">Alias</string>
    <string name="hintEmail">Email</string>
    <string name="hintDescription">Description</string>
    <string name="hintVacancies">Vacancies</string>

    <!-- BUTTONS -->
    <string name="btnDelete">Delete</string>
    <string name="btnCandidacy">Candidacy</string>
    <string name="candidacy">Candidacy</string>
    <string name="btnPassword">Password</string>
    <string name="btnDone">Done!</string>
    <string name="Create">Create</string>
    <string name="btnEditProfile">Edit Profile</string>

    <!-- TITLES -->
    <string name="editProfile">EDIT YOUR PROFILE</string>
    <string name="createOffer">CREATE OFFER</string>

    <!-- PROFILE -->
    <string name="twoPointsDesc">Description:</string>

    <!-- INFO -->
    <string name="offerDelete">The offer has been remove</string>
    <string name="applyCnd">Your candidacy has been saved</string>
    <string name="applyCndExist">You have already left a candidacy in this offer</string>
    <string name="editProfileApply">Your information has been updated</string>
    <string name="offerCreate">The offer has been created</string>
    <string name="notDesc">This team dont have any description</string>

    <!-- VALIDATION -->
    <string name="vUsername">Name must have between 1 to 30 characters</string>
    <string name="vnameOffer">Name must have between 1 to 20 characters</string>
    <string name="vAlias">Alias must have between 1 to 30 characters</string>
    <string name="vPass">Password must have between 1 to 30 characters</string>
    <string name="vPassMatch">Passwords must match</string>
    <string name="vEmail">Email must have between 1 to 30 characters</string>
    <string name="vEmailFormat">This email dont have a valid format</string>
    <string name="vEmailExist">There is already a user with that email</string>
    <string name="vDescription">Description can not have more than 100 characters</string>
    <string name="vDescriptionOffer">Description can not have more than 200 characters</string>
    <string name="vEmailPlayerExist">There is already a player with that email</string>
    <string name="vVacancies">Vacancies must have between 1 to 99</string>




</resources>
